# FraudX

./: .gitignore  README.md  pyproject.toml  pyrefly.toml  pyrightconfig.json
docs/: plan.md
src/: data_generator.py  main.py  model.py  preprocessing.py  tuner.py
