[project]
name = "fraudx"
version = "0.1.0"
description = "A comprehensive financial fraud detection system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
    "optuna>=3.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pre-commit>=3.7.0",
]

[tool.uv]
package = false

[tool.pyrefly]
python-interpreter-path = ".venv/bin/python3"
search-path = ["src"]
disable-search-path-heuristics = true



[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "PD", "N", "C4", "T20"]
ignore = [
    "E501",  # line too long
    "PD901", # 'df' is a bad variable name
    "N806",  # Variable 'X' should be lowercase
    "N803",  # Argument 'X' should be lowercase
    "PD002", # 'inplace=True' is fine
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
